apps/suwayomi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: manga
  namespace: manga
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: manga
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
