apps/suwayomi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: manga
  namespace: manga
spec:
  rules:
    - host: manga.hemera.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: manga
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: manga-tailscale
  namespace: manga
  annotations:
    tailscale.com/proxy-group: ingress-proxies
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - manga
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: manga
                port:
                  name: http
